--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "express": "^4.15.4",
     "giphy-api": "^1.2.7",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.1",
-    "node-sass": "^4.5.3",
-    "css-loader": "^0.28.7",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.8.1"
   }
 }
